# csse4011_zephyr_guides

./: 404.html  README.md  index.html  search.html  sitemap.xml
Boards/BRD.1-Arduino_Sense/: index.html
Boards/BRD.2-Thingy52/: index.html
Boards/BRD.3-Dongle_NRF52840/: index.html
Boards/BRD.4-Particle_Argon/: index.html
Boards/BRD.5-BL475E_IOT/: index.html
Boards/BRD.6-ESP32C3-devkitm/: index.html
Boards/about/: index.html
Connectivity/CN.1-GPIO/: index.html
Connectivity/CN.2-Sensors/: index.html
Connectivity/CN.3-Serial_Console/: index.html
Connectivity/CN.4-Shell/: index.html
Connectivity/CN.4.1-Shell_Commands/: index.html
Connectivity/CN.5-Logging/: index.html
Connectivity/CN.6-Segger_RTT/: index.html
Connectivity/about/: index.html
OS/OS.1-Getting_Started/: index.html
OS/OS.1.5-Zephyr_Version_Changes/: index.html
OS/OS.2-First_Program/: index.html
OS/OS.2.1-Building_Tips/: index.html
OS/OS.2.2-Implementing_Libraries/: index.html
OS/OS.4-Threading/: index.html
OS/OS.5.1-Thread_Sync/: index.html
OS/OS.5.2-Thread_Communication/: index.html
OS/about/: index.html
about/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: about.md  index.md
mkdocs/site/: 404.html  sitemap.xml
search/: search_index.json
tute_solutions/: README.md
tute_solutions/blinky_tute_ext/: CMakeLists.txt
tute_solutions/blinky_tute_ext/src/: main.c
tute_solutions/console_example/: prj.conf
tute_solutions/thingy52_speaker/: CMakeLists.txt  leds.dtsi  prj.conf  pwm0_en.overlay
tute_solutions/thingy52_speaker/src/: main.c
(+66 files in other folders)
